# EchoGraph

./: INSTALL.md  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: BrainstormCanvas.tsx  SessionOutline.tsx
src/components/nodes/: EditableSessionNode.tsx
src/lib/: openAiRepository.ts  sessionRepository.ts
src/store/: graphStore.ts
src/types/: session.ts
