[package]
name = "echograph"
version = "0.1.0"
description = "Local-first multi-agent brainstorming canvas"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
dirs = "6.0"
keyring = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
